--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "express-jwt": "^6.0.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "uuid": "^8.3.2"
   }
 }
