--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "googleapis": "^67.1.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
