--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "googleapis": "^67.1.1",
+    "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
